0.1728
    - update_param is DEPRECATED, use assing_clause instead.
    - assing_param is renamed to assing_clause, assing_param is DEPRECATED!
    - insert_param is renamed to values_clause, insert_param is DEPRECATED!
0.1727
    - improved join clause parsing
0.1726
    - improved join clause parsing
0.1725
    - improved join clause parsing
0.1724
    - added EXPERIMENTAL like_value method to DBIx::Custom
    - sqlfilter option is renamed to after_build_sql, sqlfilter is DEPRECATED!
    - removed EXPERIMENTAL flag from DBIx::Custom::Mapper
    - removed EXPERIMENTAL flag from the following DBIx::Custom methods
    insert_timestamp, mapper, update_timestamp
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's option
    timestamp, 
0.1723
    - removed EXPERIMENTAL call_dbi method from DBIx::Custom::Model
    - removed EXPERIMENTAL map_param method from DBIx::Custom
    - removed EXPERIMENTAL the following methods from DBIx::Custom::Where
      if, map
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Model methods
      count, execute
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Result mehotds
      filter_on, type_rule, type_rule_off, type_rule_on, type_rule1_off,
      type_rule1_on, type_rule2_off, type_rule2_on
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's options
      sqlfilter, type_rule_off, type_rule1_off, type_rule2_off,
      table_alias, wrap
    - removed EXPERIMENTAL flag from DBIx::Custom::Order
    - removed EXPERIMETNAL flag from the following DBIx::Custom methods
      exclude_table, user_column_info,
      user_table_info, available_datatype, available_typename,
      assign_param, count, get_column_info, get_table_info
      order, show_datatype, show_typename methods, show_tables, type_rule,
    - added EXPERIMENTAL update_timestamp method to DBIx::Custom
    - added EXPERIMENTAL insert_timestamp method to DBIx::Custom